# daily-devotional

./: .gitignore  CNAME  NOTES.md  README.md  index.html  pyproject.toml
.github/workflows/: scrape-devotional.yml
data/: devotionals.json  latest.json
scripts/: fetchDevotional.js  scrape_devotional.py
