[tool.poetry]
name = "daily-devotional-scraper"
version = "0.1.0"
description = "Scraper for Pastor Jon Courson's daily devotionals"
authors = ["Kevin Wasike Wakhisi <kevin@wakhisi.space>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
lxml = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
